--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
+    <style>
         :root {
             --very-light-pink : #c7c7c7;
             --text-input-field : #f7f7f7;
@@ -13,11 +16,18 @@
             --white : #FFFFFF;
             --black : #000000;
             --dark : #232830;
+            --font-light: 300;
+            --font-regular: 400;
+            --font-bold: 700;
         }
-        
+        body {
+            font-family: "Quicksand", sans-serif;
+            font-weight: var(--font-light);
+            font-size: 50px;
+        }
     </style>
 </head>
 <body>
-    
+    <p>Hello!</p>
 </body>
 </html>
