--- a/clase14CssShoppingCart.html
+++ b/clase14CssShoppingCart.html
@@ -118,7 +118,7 @@
     <div class="my-order">
 
         <div class="my-order-container">
-            <h1 class="tittle">My orders</h1>
+            <h1 class="tittle">My order</h1>
             <div class="my-order-content">
                 <div class="order">
                     <p>
