Calse 19, shopping cart.

--- a/clase14CssMyOrder.html
+++ b/clase14CssMyOrder.html
@@ -166,6 +166,7 @@
                     </figure>
                     <p>Bike</p>
                     <p>$30</p>
+                    <img src="./icons/icon_close.png" alt="quit">
                 </div>
 
                 <div class="shopping-cart">
